--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "async": "^0.9.0",
     "knex": "^0.7.3",
     "lodash": "^2.4.1",
+    "log4js": "^0.6.21",
     "sqlite3": "^3.0.2"
   },
   "devDependencies": {
